tests/e2e/closing_parenthesis3_error.error
Error: syntax error in story at line 1, column 14

1|    a = {"foo": 2
                   ^

E0076: Unexpected end of line. Maybe close a `}` or `]` expression?
